--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.9",
     "next": "latest",
     "node-fetch": "^2.6.0",
     "react": "^16.8.4",
