--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.9",
+    "@sentry/node": "^5.15.4",
     "next": "latest",
     "node-fetch": "^2.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "serverless-next.js": "^1.9.8"
+  }
 }
